[metadata]
name = ipv4helper
version = 0.9.0
author = James Bonifield
author_email = bonifield.tools@gmail.com
description = Handle and manipulate IPv4 CIDRs in a simple fashion, including generating CIDR ranges and viewing general subnet information.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bonifield/IPv4Helper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
